# linearMem

./: .gitignore  main.py  pixi.toml  pyproject.toml  sanity_check.py  setup_env.sh  test.py  test_kv_cache_patch.py
src/Memllm/transformers/linearmem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/Memllm/transformers/qwen3mem/: __init__.py  kv_cache.py  modeling_qwen3mem.py
src/linearmem.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
swaa_patch/: README_KV_CACHE.md  __init__.py  hack_hf_swaa.py  hack_kv_cache.py  pyproject.toml
swaa_patch/swaa_patch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
